Changed SelectDiagramType size to avoid wrapping.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -174,7 +174,7 @@
 }
 
 .modal-dialog #inputDiagramType {
-	width: 259px; 
+	width: 250px; 
 	text-align: left;
 }
 
